# serde-transcode

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
doc/v0.1.0/: search-index.js
doc/v0.1.0/implementors/serde/ser/: trait.Serialize.js
doc/v0.1.0/serde_transcode/: index.html  sidebar-items.js  struct.Transcoder.html
doc/v0.1.0/src/serde_transcode/src/: lib.rs.html
doc/v0.1.1/: search-index.js
doc/v0.1.1/implementors/serde/ser/: trait.Serialize.js
doc/v0.1.1/serde_transcode/: Transcoder.t.html  fn.transcode.html  index.html  sidebar-items.js  struct.Transcoder.html  transcode.v.html
doc/v0.1.1/src/serde_transcode/src/: lib.rs.html
src/: lib.rs  test.rs
