[package]
name = "serde-transcode"
version = "0.2.1"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "MIT/Apache-2.0"
description = "Transcode from one Serde format to another"
repository = "https://github.com/sfackler/serde-transcode"
documentation = "https://docs.rs/serde-transcode/0.2.1/serde_transcode"
readme = "README.md"

[dependencies]
serde = { git = "https://github.com/serde-rs/serde", branch = "1.0" }

[dev-dependencies]
serde_json = { git = "https://github.com/serde-rs/json", branch = "1.0" }
